# SEEL

./: Cargo.toml  README.md  build.rs
args/: Cargo.toml
args/src/: args.rs  lib.rs
backend/: Cargo.toml
backend/src/: interpreter.rs  lib.rs  runtime.rs  visitor.rs
frontend/: Cargo.toml
frontend/src/: grammar.lalrpop  grammar.rs  helper.rs  lib.rs  parser.rs
lang_docs/: bash_exec.md  easy_print.md  if_statements.md  print.md  variable_assignment.md
src/: args.rs  grammar.lalrpop  interpreter.rs  main.rs  parser.rs  runtime.rs  visitor.rs
test/: test.seel
