[package]
name = "SEEL"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lints.rust]
unused_unsafe = { level = "allow" }
unsafe_op_in_unsafe_fn = { level = "deny" }

[profile.dev]
incremental = true

[profile.release]
incremental = true

[build-dependencies]
lalrpop = "0.22.1"
anyhow = "1.0.95"

[dependencies]
anyhow = "1.0.95"
backend = { version = "0.1.0", path = "backend" }
clap = { version = "4.5.30", features = ["derive"] }
frontend = { version = "0.1.0", path = "frontend" }
