[package]
name = "SEEL"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lints.rust]
unused_unsafe = { level = "allow" }
unsafe_op_in_unsafe_fn = { level = "deny" }

[profile.dev]
incremental = true
lto = false

[profile.release]
incremental = true
lto = false

[build-dependencies]
lalrpop = "0.22.1"
anyhow = "1.0.95"

[dependencies]
anyhow = "1.0.95"
args = { version = "0.1.0", path = "args" }
backend = { version = "0.1.0", path = "backend" }
frontend = { version = "0.1.0", path = "frontend" }
